# cmake_test_template

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: calc.h
lib/src/: calc.cpp
tests/: CMakeLists.txt  test_mylib.cpp
